<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
        <artifactId>salsa-core-pom</artifactId>
        <version>2.0</version>
    </parent>

    <artifactId>salsa-engine</artifactId>    
    <packaging>war</packaging>

    <name>salsa-engine</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.7</java.version>
        <cxf.version>3.0.3</cxf.version>
        <spring.version>4.0.4.RELEASE</spring.version>
        <slf4j.version>1.7.5</slf4j.version>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
            <type>jar</type>
        </dependency>

		
        <!-- Apache CXF dependencies -->
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http</artifactId>
            <version>${cxf.version}</version>
        </dependency>
        <dependency> 
            <groupId>org.apache.cxf</groupId> 
            <artifactId>cxf-rt-rs-client</artifactId> 
            <version>${cxf.version}</version> 
        </dependency> 

        <!--Spring Framework dependencies--> 
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-jaxrs</artifactId>            
            <version>1.9.13</version>
        </dependency>

	                              	
        <!-- Swagger API documentation -->
        <!--         <dependency> -->
        <!--             <groupId>com.wordnik</groupId> -->
        <!--             <artifactId>swagger-jaxrs_2.10</artifactId> -->
        <!--             <version>1.3.1</version> -->
        <!--         </dependency> -->
        <!--         <dependency> -->
        <!--             <groupId>com.wordnik</groupId> -->
        <!--             <artifactId>swagger-core_2.10</artifactId> -->
        <!--             <version>1.3.1</version> -->
        <!--         </dependency> -->


                

        <dependency>
            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
            <artifactId>salsa-common</artifactId>
            <version>2.0</version>
        </dependency>
		
        <dependency>
            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
            <artifactId>salsa-cloud-connector</artifactId>
            <version>2.0</version>
        </dependency>
        
        <dependency>
            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
            <artifactId>salsa-messaging</artifactId>
            <version>2.0</version>
        </dependency>
		
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.3</version>
        </dependency>
        
        <!-- QUELLE dependency -->
        <dependency>
            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
            <artifactId>QUELLE-Core-CloudServicesModel-SALSA</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
            <artifactId>QUELLE-Core-ElasticityQuantification-SALSA</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>at.ac.tuwien.mela</groupId>
            <artifactId>MELA-Common</artifactId>
            <version>3.0-SNAPSHOT</version>
            <type>jar</type>
        </dependency> 
        <!--
                <dependency>
                    <groupId>at.ac.tuwien.quelle</groupId>
                    <artifactId>QUELLE-Core-CloudServicesModel</artifactId>
                    <version>1.0-SNAPSHOT</version>
                </dependency>
                <dependency>
                    <groupId>at.ac.tuwien.quelle</groupId>
                    <artifactId>QUELLE-Core-ElasticityQuantification</artifactId>
                    <version>1.0-SNAPSHOT</version>
                </dependency>
                <dependency>
                    <groupId>at.ac.tuwien.mela</groupId>
                    <artifactId>MELA-Common</artifactId>
                    <version>3.0-SNAPSHOT</version>
                    <type>jar</type>
                </dependency>        
        -->
    </dependencies>

    <build>
        <finalName>salsa-engine</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
                <version>3.2</version>
            </plugin>

            <!--            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>tomcat-maven-plugin</artifactId>
                <configuration>
                    <url>http://[Tomcat_IP:PORT]/manager/text</url>
                    <server>TomcatServerDSG</server>
                    <path>/salsa-engine</path>
                </configuration>
                <version>1.1</version>
            </plugin>-->
			            
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.1</version>
                <executions>
                    <execution>
                        <id>tomcat-create-exec-war</id>
                        <goals>
                            <goal>exec-war</goal>
                        </goals>
                        <phase>package</phase>
                        <configuration>
                            <path>/${project.build.finalName}</path>
                            <!--                            <systemProperties>
                                <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
                            </systemProperties>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>
	
    <repositories>
        <repository>
            <id>maven2-repository.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
            <layout>default</layout>
        </repository>
        
        <!--        <repository>
            <id>maven2-repository.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>https://maven.java.net/content/groups/public/</url>
            <layout>default</layout>
        </repository>-->
        
             
        <repository>
            <id>infosys-maven-ext</id>
            <name>infosys-maven-releases</name>
            <url>http://repo.infosys.tuwien.ac.at/artifactory/ext</url>
        </repository>
        
        <repository>
            <id>infosys-maven-comot</id>
            <name>infosys-maven-releases</name>
            <url>http://repo.infosys.tuwien.ac.at/artifactory/comot</url>
        </repository>

    </repositories>


</project>
